feat: add login UI

--- a/src/presentation/styles/_colors.scss
+++ b/src/presentation/styles/_colors.scss
@@ -7,3 +7,6 @@ $background: #260769;
 $disabledBackground: #CCC;
 $link: #39cfff;
 $callToAction: #ff2052;
+$disabledColor: #666;
+$valid: #4CAF50;
+$invalid: #EF5350;
