feat: add disabled button global styles

--- a/src/presentation/styles/_global.scss
+++ b/src/presentation/styles/_global.scss
@@ -30,4 +30,9 @@ button {
   &:hover {
     opacity: 0.9;
   }
+
+  &:disabled {
+    background-color: $disabledColor;
+    cursor: not-allowed;
+  }
 }
