--- a/src/presentation/components/input/input-styles.scss
+++ b/src/presentation/components/input/input-styles.scss
@@ -58,6 +58,7 @@ input {
   line-height: 40px;
   font-size: 1.2rem;
   padding: 0px 40px 0px 8px;
+  color: $black;
 
   &:not(:placeholder-shown) + label {
     transform: translate(-5px, -30px) scale(.9);
