--- a/src/presentation/components/header/header-styles.scss
+++ b/src/presentation/components/header/header-styles.scss
@@ -10,8 +10,9 @@
   top: 0;
   left: 0;
   right: 0;
-  height: 5rem;
+  height: 12vh;
   z-index: $zIndex-header;
+  box-shadow: 0px 1px 3px -1px $black;
 
   .headerContent {
     display: flex;
