--- a/src/presentation/pages/dragons/components/dragon/dragon-styles.scss
+++ b/src/presentation/pages/dragons/components/dragon/dragon-styles.scss
@@ -40,14 +40,14 @@
   .infoWrapper {
     display: flex;
     flex-direction: column;
-    padding: 45px 0;
-    justify-content: space-evenly;
+    padding: 45px;
+    justify-content: center;
     flex-grow: 1;
 
   .infoCard {
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: flex-start;
     margin: 0;
 
     h2 {
@@ -86,8 +86,8 @@
   }
   p {
     font-size: 1.1rem;
-    align-self: center;
     color: $black;
+    text-align: left;
   }
 }
 
@@ -117,6 +117,7 @@ footer {
     .infoWrapper {
       display: flex;
       flex-direction: row;
+      justify-content: flex-start;
     .infoCard {
       justify-content: center;
       margin: 0 !important;
