fix: adjust margin top using vh

--- a/src/presentation/pages/dragons/dragons-styles.scss
+++ b/src/presentation/pages/dragons/dragons-styles.scss
@@ -6,7 +6,7 @@
   min-height: 88vh;
   justify-content: space-between;
   background: $primaryDark;
-  margin-top: 80px;
+  margin-top: 12vh;
 
   .contentWrapper {
     display: flex;
