feat: add textarea global styles

--- a/src/presentation/styles/_global.scss
+++ b/src/presentation/styles/_global.scss
@@ -14,7 +14,8 @@ body {
 
 input[type='email'],
 input[type='password'],
-input[type='text'] {
+input[type='text'],
+textarea {
   outline: none;
   border: none;
 }
