feat: add svg global style

--- a/src/presentation/styles/_global.scss
+++ b/src/presentation/styles/_global.scss
@@ -20,6 +20,15 @@ textarea {
   border: none;
 }
 
+svg {
+  color: $link;
+  cursor: pointer;
+
+  &:hover {
+    color: $callToAction;
+  }
+}
+
 button {
   background-color: $primary;
   border-radius: 8px;
