--- a/src/presentation/components/error/error-styles.scss
+++ b/src/presentation/components/error/error-styles.scss
@@ -9,6 +9,7 @@
   text-align: center;
   border-radius: 8px;
   box-shadow: 0px 1px 3px -1px $black;
+  width: 100%;
 
   button {
     padding: 0 1rem;
