--- a/src/presentation/pages/dragons/components/dragon/dragon-styles.scss
+++ b/src/presentation/pages/dragons/components/dragon/dragon-styles.scss
@@ -114,7 +114,7 @@ footer {
 }
 
 @media only screen and (min-width: 430px) {
-  .dragonContent {
+  .dragonContent, li:empty {
     min-height: 220px;
     min-width: 400px;
     .infoWrapper {
