fix: adjusting sidebard styles

--- a/src/presentation/components/burguer/burguer-styles.scss
+++ b/src/presentation/components/burguer/burguer-styles.scss
@@ -2,7 +2,7 @@
 @import '../../styles/config';
 
 .burguer {
-  position: absolute;
+  position: fixed;
   top: 3vh;
   left: 2rem;
   display: flex;
