--- a/src/presentation/components/side-menu/side-menu-styles.scss
+++ b/src/presentation/components/side-menu/side-menu-styles.scss
@@ -9,9 +9,10 @@ nav {
   height: 100vh;
   text-align: left;
   padding: 2rem;
-  position: absolute;
+  position: fixed;
   top: 0;
   left: 0;
+  bottom: 0;
   transition: transform 0.3s ease-in-out;
   transform: translateX(-100%);
   z-index: $zIndex-sideBar;
