--- a/src/presentation/pages/update-dragon/update-dragon-styles.scss
+++ b/src/presentation/pages/update-dragon/update-dragon-styles.scss
@@ -9,13 +9,19 @@
   justify-content: center;
   align-items: center;
 
+  .content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 1rem;
+
   form {
     width: 100%;
     background-color: $primaryDark;
     display: flex;
     flex-direction: column;
     align-items: center;
-    padding: 1rem;
 
     h2 {
       font-size: 2rem;
@@ -27,8 +33,9 @@
       width: 100%;
     }
   }
+}
   @media (min-width: 40rem) {
-    form {
+    .content {
       flex-grow: 1;
       max-width: 30rem;
     }
